2007-11-13  Peter Bloomfield

	Bug #496316: Send/Queue button has inconsistent labeling.
	* src/toolbar-factory.h: new function balsa_toolbar_button_text.
	* src/toolbar-factory.c: (balsa_toolbar_button_text,
	tm_has_second_line, tm_set_tool_item_label): implement and use it.
	* src/toolbar-prefs.c: (tp_store_set): use it.

2007-11-10  Peter Bloomfield

	* src/balsa-message.c: (balsa_get_parent_window): use
	gtk_widget_get_toplevel.

2007-10-31  Peter Bloomfield

	* src/main-window.c: connect to "activate" signal instead of
	"changed", to see every click on threading options.

2007-10-24  Albrecht Dreß

	* src/balsa-icons.c:
	* src/balsa-message.c:
	* src/balsa-print-object-text.c: More balsa Tangofication.

2007-10-23  Albrecht Dreß

	* configure.in:
	* libbalsa/Makefile.am:
	* libbalsa/address-book-rubrica.c:
	* libbalsa/address-book-rubrica.h:
	* libbalsa/libbalsa.c:
	* libbalsa/libbalsa.h:
	* src/ab-main.c:
	* src/ab-window.c:
	* src/address-book-config.c:
	* src/main.c:
	* src/pref-manager.c: add support for Rubrica address book.

2007-10-17  Peter Bloomfield

	* libbalsa/mailbox_maildir.c: skip check only if mtime matches
	exactly.
	* src/balsa-index.c: revert to scrolling in an idle callback,
	but now at low priority.

2007-10-15  Peter Bloomfield

	* libbalsa/mailbox_local.c: clarify simple and flat threading.

2007-10-14  Peter Bloomfield

	* libbalsa/mailbox.c: (lbm_get_view): do not assert url is not
	in hash table;
	(lbm_sort): set msg-tree-changed;
	(libbalsa_mailbox_unlink_and_prepend): set msg-tree-changed only
	if we are sure it was.
	* libbalsa/mailbox_local.c: (lbm_local_update_view_filter): set
	msg-tree-changed only if it is a flags-only filter; fix bug
	saving and restoring simple threading.
	* src/main-window.c: avoid critical warning if Balsa is closed
	during a threading.

2007-10-10  Peter Bloomfield

	* libbalsa/Makefile.am:
	* libbalsa/address-book-extern.c:
	* libbalsa/address-book-ldap.c:
	* libbalsa/address-book-ldif.c: