@@ -257,9 +257,10 @@ static void bw_show_mbtree_cb(GtkToggleAction * action, gpointer data);
 static void bw_show_mbtabs_cb(GtkToggleAction * action, gpointer data);
 #endif /* ENABLE_TOUCH_UI */
 
-static void bw_notebook_size_alloc_cb(GtkWidget * notebook,
-                                      GtkAllocation * alloc);
-static void bw_size_alloc_cb(GtkWidget * window, GtkAllocation * alloc);
+static void bw_notebook_size_allocate_cb(GtkWidget * notebook,
+                                         GtkAllocation * alloc,
+                                         BalsaWindow * bw);
+static void bw_size_allocate_cb(GtkWidget * window, GtkAllocation * alloc);
 
 static void bw_notebook_switch_page_cb(GtkWidget * notebook,
                                        GtkNotebookPage * page,
@@ -974,13 +975,14 @@ bw_delete_cb(GtkWidget* main_window)
 #endif
     return FALSE; /* allow delete */
 }
+
 static void
-bw_size_allocate_cb(GtkWidget * widget, GtkAllocation * alloc)
+bw_mblist_size_allocate_cb(GtkWidget * widget, GtkAllocation * alloc,
+                           BalsaWindow * bw)
 {
-    if (balsa_app.show_mblist) {
-	GtkWidget *paned = gtk_widget_get_ancestor(widget, GTK_TYPE_PANED);
-	balsa_app.mblist_width = gtk_paned_get_position(GTK_PANED(paned));
-    }
+    if (balsa_app.show_mblist && !balsa_app.mw_maximized)
+        balsa_app.mblist_width =
+            gtk_paned_get_position(GTK_PANED(bw->hpaned));
 }
 
 static GtkWidget *
@@ -1487,9 +1489,11 @@ bw_window_state_event_cb(BalsaWindow * window,
                          GdkEventWindowState * event,
                          GtkStatusbar * statusbar)
 {
-    gtk_statusbar_set_has_resize_grip(statusbar,
-                                      !(event->new_window_state &
-                                        GDK_WINDOW_STATE_MAXIMIZED));
+    balsa_app.mw_maximized =
+        event->new_window_state & GDK_WINDOW_STATE_MAXIMIZED;
+
+    gtk_statusbar_set_has_resize_grip(statusbar, !balsa_app.mw_maximized);
+
     return FALSE;
 }
 
@@ -1573,6 +1577,8 @@ balsa_window_new()
     gtk_window_set_resizable(GTK_WINDOW(window), TRUE);
     gtk_window_set_default_size(GTK_WINDOW(window), balsa_app.mw_width,
                                 balsa_app.mw_height);
+    if (balsa_app.mw_maximized)
+        gtk_window_maximize(GTK_WINDOW(window));
 
     window->notebook = gtk_notebook_new();
     gtk_notebook_set_show_tabs(GTK_NOTEBOOK(window->notebook),
@@ -1580,7 +1586,7 @@ balsa_window_new()
     gtk_notebook_set_show_border (GTK_NOTEBOOK(window->notebook), FALSE);
     gtk_notebook_set_scrollable (GTK_NOTEBOOK (window->notebook), TRUE);
     g_signal_connect(G_OBJECT(window->notebook), "size_allocate",
-                     G_CALLBACK(bw_notebook_size_alloc_cb), NULL);
+                     G_CALLBACK(bw_notebook_size_allocate_cb), window);
     g_signal_connect(G_OBJECT(window->notebook), "switch_page",
                      G_CALLBACK(bw_notebook_switch_page_cb), window);
     gtk_drag_dest_set (GTK_WIDGET (window->notebook), GTK_DEST_DEFAULT_ALL,
@@ -1611,7 +1617,7 @@ balsa_window_new()
     gtk_scrolled_window_set_policy(GTK_SCROLLED_WINDOW(window->mblist),
                                    GTK_POLICY_AUTOMATIC, GTK_POLICY_AUTOMATIC);
     g_signal_connect(G_OBJECT(balsa_app.mblist), "size_allocate",
-		     G_CALLBACK(bw_size_allocate_cb), NULL);
+		     G_CALLBACK(bw_mblist_size_allocate_cb), window);
     g_signal_connect_swapped(balsa_app.mblist, "has-unread-mailbox",
 		             G_CALLBACK(bw_enable_next_unread), window);
     balsa_mblist_default_signal_bindings(balsa_app.mblist);
@@ -1688,7 +1694,7 @@ balsa_window_new()
     bw_enable_next_unread(window, FALSE);
 
     g_signal_connect(G_OBJECT(window), "size_allocate",
-                     G_CALLBACK(bw_size_alloc_cb), NULL);
+                     G_CALLBACK(bw_size_allocate_cb), NULL);
     g_signal_connect(G_OBJECT (window), "destroy",
                      G_CALLBACK (gtk_main_quit), NULL);
     g_signal_connect(G_OBJECT(window), "delete-event",
@@ -4502,19 +4508,21 @@ balsa_change_window_layout(BalsaWindow *window)
 
 /* PKGW: remember when they change the position of the vpaned. */
 static void
-bw_notebook_size_alloc_cb(GtkWidget * notebook, GtkAllocation * alloc)
+bw_notebook_size_allocate_cb(GtkWidget * notebook, GtkAllocation * alloc,
+                             BalsaWindow * bw)
 {
-    if (balsa_app.previewpane) {
-	GtkWidget *paned = gtk_widget_get_ancestor(notebook, GTK_TYPE_PANED);
-        balsa_app.notebook_height = gtk_paned_get_position(GTK_PANED(paned));
-    }
+    if (balsa_app.previewpane && !balsa_app.mw_maximized)
+        balsa_app.notebook_height =
+            gtk_paned_get_position(GTK_PANED(bw->vpaned));
 }
 
 static void
-bw_size_alloc_cb(GtkWidget * window, GtkAllocation * alloc)
+bw_size_allocate_cb(GtkWidget * window, GtkAllocation * alloc)
 {
-    balsa_app.mw_height = alloc->height;
-    balsa_app.mw_width = alloc->width;
+    if (!balsa_app.mw_maximized) {
+        balsa_app.mw_height = alloc->height;
+        balsa_app.mw_width  = alloc->width;
+    }
 }
 
 /* When page is switched we change the preview window and the selected 
